[gd_scene load_steps=11 format=3 uid="uid://bahvf2v6h6slc"]

[ext_resource type="Script" uid="uid://bpq84bf3t0mv1" path="res://game/player/player_controllers/player_controller.gd" id="1_nv744"]
[ext_resource type="Resource" uid="uid://dig8hnr4lgk3o" path="res://input/time_freeze.tres" id="2_5df8n"]
[ext_resource type="Resource" uid="uid://c6tovgnwacf3x" path="res://input/move.tres" id="2_robka"]
[ext_resource type="Resource" uid="uid://b1fqbn0g2j3ff" path="res://input/fly.tres" id="3_w85yc"]
[ext_resource type="Resource" uid="uid://7bvnpytk6bwy" path="res://input/camera.tres" id="4_5df8n"]
[ext_resource type="Resource" uid="uid://dr3iky0gcpwi5" path="res://input/interact.tres" id="5_bcob5"]
[ext_resource type="Resource" uid="uid://dn3lfk06ljxi0" path="res://input/reset_camera.tres" id="6_w85yc"]
[ext_resource type="Resource" uid="uid://chr8jlfgt04eh" path="res://input/hover.tres" id="8_xqxmv"]

[sub_resource type="SphereShape3D" id="SphereShape3D_robka"]

[sub_resource type="BoxShape3D" id="BoxShape3D_robka"]
size = Vector3(2.5, 2.42421, 3.00579)

[node name="PlayerControler" type="Node3D"]
script = ExtResource("1_nv744")
time_freeze = ExtResource("2_5df8n")
move_action = ExtResource("2_robka")
fly_action = ExtResource("3_w85yc")
camera_control = ExtResource("4_5df8n")
interact_action = ExtResource("5_bcob5")
reset_camera = ExtResource("6_w85yc")
hover_action = ExtResource("8_xqxmv")
dash_cooldown = 0.35
offset = Vector3(0, 1.25, 0)
mini_cam_offset = 40.0

[node name="SpringArm3D" type="SpringArm3D" parent="."]
shape = SubResource("SphereShape3D_robka")
spring_length = 0.1
margin = 0.001

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.981627, 0.190809, 0, -0.190809, 0.981627, 0, 0, 0)
cull_mask = 1048573

[node name="CameraFraming" type="Area3D" parent="SpringArm3D/Camera3D"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpringArm3D/Camera3D/CameraFraming"]
transform = Transform3D(1, 0, 0, 0, 0.999998, 3.57628e-07, 0, -3.57628e-07, 0.999998, 0, -0.572154, -3.17903)
shape = SubResource("BoxShape3D_robka")

[node name="HoverTimer" type="Timer" parent="."]
one_shot = true

[node name="CameraTimer" type="Timer" parent="."]
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -128

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -160.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
color = Color(0, 0, 0, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/ColorRect/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(150, 150)
render_target_update_mode = 4

[node name="MiniMapCam" type="Camera3D" parent="CanvasLayer/ColorRect/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 30, 0)
cull_mask = 2
projection = 1
size = 20.0
